--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,17 +26,13 @@ requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
-requests = "^2.23.0"
-types-requests = "^2.28.5"
-types-python-dateutil = "^2.8.19"
-pandas = ">=1.4.3"
-numpy = [
-    { version = "^1.22.4", python = ">=3.8,<3.12" },
-    { version = "^1.26.0", python = ">=3.12" }
-]
-tomli = { version = "^2.0.1", python = ">=3.8,<3.11" }
-tenacity = "^8.0.1"
+python = ">=3.8.0"
+requests = ">=2.32.3"
+types-requests = ">=2.32.0"
+types-python-dateutil = ">=2.9.0"
+pandas = ">=2.2.2"
+numpy = ">=2.0.1"
+tomli = ">=2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
